--- a/Company/employeecreator.ui
+++ b/Company/employeecreator.ui
@@ -59,7 +59,7 @@
    <item row="6" column="0">
     <widget class="QLabel" name="salary">
      <property name="text">
-      <string>ЗП</string>
+      <string>Зарплата</string>
      </property>
     </widget>
    </item>
