--- a/Company/mainwidget.ui
+++ b/Company/mainwidget.ui
@@ -51,7 +51,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Наименование отдела:</string>
+      <string>Наизвание отдела:</string>
      </property>
     </widget>
    </item>
@@ -66,7 +66,7 @@
         <enum>Qt::LeftToRight</enum>
        </property>
        <property name="text">
-        <string>Наименование отдела</string>
+        <string>Название отдела</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -184,7 +184,7 @@
       </sizepolicy>
      </property>
      <property name="placeholderText">
-      <string>Введите наименование отдела</string>
+      <string>Введите название отдела</string>
      </property>
     </widget>
    </item>
